crates/carta/tests/snapshots/golden_writer__native__image-dimensions__image-inline-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[ Para
    [ Str "text"
    , Space
    , Image
        ( "" , [] , [ ( "width" , "200" ) ] )
        [ Str "alt" ]
        ( "pic.png" , "" )
    , Space
    , Str "more"
    ]
]
